# python_web_task_4

./: Dockerfile  main.py  pyproject.toml  socket_server.py
storage/: data.json
