[tool.poetry]
name = "python-web-task-4"
version = "0.1.0"
description = ""
authors = ["Dubas14 <ev.hanzha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
